h1. CHANGELOG

h3. 3.0.1 January 29, 2016 (Book Two version 3.0.1)

* don't use Foundation 6, use foundation-rails 5.5 gem, fixes #79

h3. 3.0.0 January 14, 2016 (book version 3.0.0)

* switch to using the Mandrill service to send email
* changes to the UserMailer class
* sending mail now requires the method 'deliver_now' instead of 'deliver'
* updated Ruby version to 2.3.0

h3. 2.2.3 November 16, 2015 (book version 2.2.2)

* updated Rails from Rails version 4.2.4 to 4.2.5

h3. 2.2.2 October 30, 2015 (book version 2.2.2)

* updated filename to '1st_load_framework.css.scss' from 'framework_and_overrides.css.scss' for change in the rails_layout gem

h3. 2.2.1 September 2, 2015 (book version 2.2.1)

* updated Rails from version Rails 4.2.1 to 4.2.4
* updated Ruby version to 2.2.3
* update Visitor model for Gibbon 2.0

h3. 2.2.0 June 6, 2015 (book version 2.2.0)

* book version matches the example application
* removed 'google_drive' gem and 'update_spreadsheet' method (no longer using Google Drive)

h3. 2.1.6 March 17, 2015 (book version 2.1.6)

* book version matches the example application

h3. 2.1.5 February 16, 2015 (book version 2.1.5)

* use Ruby 1.9 hash syntax in the 'validates_format_of :email' statement (closes issue #46)

h3. 2.1.4 December 29, 2014 (book version 2.1.4)

* workaround for changes in 'google_drive' gem v1.0.0
* updated Ruby from version 2.1.5 to 2.2.0

h3. 2.1.3 December 25, 2014 (book version 2.1.3)

* updated Rails from version 4.1.8 to Rails 4.2.0

h3. 2.1.2 December 4, 2014 (book version 2.1.2)

* updated Ruby from version 2.1.3 to 2.1.5
* updated Rails from version 4.1.6 to Rails 4.1.8

h3. 2.1.0 October 12, 2014 (book version 2.1.1)

* no need to specify 'foundation-rails' gem version (closes issue #38)

h3. 2.0.4 September 24, 2014 (book version unreleased)

* updated Ruby from version 2.1.2 to 2.1.3
* updated Rails from version 4.1.4 to Rails 4.1.6
* add files to support deployment with Heroku Button