@@ -11,11 +11,11 @@
 # if you're sharing your code publicly.
 
 development:
-  mandrill_username: <%= ENV["MANDRILL_USERNAME"] %>
-  mandrill_api_key: <%= ENV["MANDRILL_API_KEY"] %>
+  email_provider_username: <%= ENV["MANDRILL_USERNAME"] %>
+  email_provider_apikey: <%= ENV["MANDRILL_API_KEY"] %>
+  domain_name: example.com
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
-  domain_name: example.com
   owner_email: <%= ENV["OWNER_EMAIL"] %>
   secret_key_base: very_long_random_string
 
@@ -25,10 +25,10 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  mandrill_username: <%= ENV["MANDRILL_USERNAME"] %>
-  mandrill_api_key: <%= ENV["MANDRILL_API_KEY"] %>
+  email_provider_username: <%= ENV["MANDRILL_USERNAME"] %>
+  email_provider_apikey: <%= ENV["MANDRILL_API_KEY"] %>
+  domain_name: <%= ENV["DOMAIN_NAME"] %>
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
-  domain_name: <%= ENV["DOMAIN_NAME"] %>
   owner_email: <%= ENV["OWNER_EMAIL"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
